#pragma once
#include <QString>

struct Show {
    int anime_id;
    QString name;
    QString genre;
    QString type;
    int episodes;
    double rating;
    int members;
};
